hphp/test/zend/good/Zend/tests/access_modifiers_001.php.expectf

Fatal error: A method declaration cannot have duplicate modifiers. in %s/access_modifiers_001.php on line 4
